# soya_store

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  web.config
backend/: manage.py  migrate.py
backend/soya_project/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
backend/soya_store/: admin.py  apps.py  auth.py  models.py  password_reset.py  permissions.py  serializers.py  throttling.py  urls.py  views.py
backend/soya_store/migrations/: 0001_initial.py
client/: index.html
client/src/: App.jsx  App.tsx
client/src/components/: AddProductForm.jsx  CartSidebar.jsx  CartSidebar.tsx  Chatbot.jsx  CookieConsent.jsx  CookieConsent.tsx  CustomerDetails.jsx  DeleteConfirmDialog.jsx  Footer.jsx  Footer.tsx  GoogleTranslateLanguageSwitcher.jsx  Header.jsx  Header.tsx  ImageUpload.jsx  LanguageSwitcher.jsx  Layout.jsx  Layout.tsx  NotificationButton.jsx  OrderStatus.jsx  OrderStatus.tsx  PaymentUpload.tsx  ProductCard.jsx  ProductCard.tsx  ProductEditDialog.jsx  ProductRecommendations.jsx  ProtectedRoute.jsx  ProtectedRoute.tsx  TwoFactorAuth.jsx  TwoFactorAuth.tsx
client/src/context/: AuthContext.jsx  AuthContext.tsx  LanguageContext.jsx  NotificationContext.jsx  ShopContext.jsx  ShopContext.tsx
client/src/lib/: apiConfig.js  apiService.js  chatbotService.js  googleTranslateService.js  recommendationService.js  utils.ts
client/src/pages/: Admin.jsx  Admin.tsx  AdminTest.jsx  Checkout.tsx  Home.jsx  Home.tsx  Login.jsx  (+14 more)
server/: chatbot-service.ts  db.ts  django-proxy.ts  index.ts  routes.ts  storage.ts  types.d.ts
shared/: schema.ts
(+1 files in other folders)
